# parametric_bootstrap

./: .gitignore  README.md  main.py  optimised_main.py  pyproject.toml
statistical_models/: __init__.py  integrator.py  pdfs.py
tests/: test_integrator.py
