[build-system]
requires = ["setuptools", "wheel", "build", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "statistical_models"
dynamic = ["version"]
description = "A package to define statistical PDFs and perform numerical integrations for toy studies."
authors = [{ name = "Lucas Curtin", email = "lucas.curtin@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = ["scipy", "numpy", "matplotlib", "ruff", "pytest"]

[tool.setuptools_scm]
write_to = "statistical_models/version.py"
